# arsenic

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  appveyor.yml  docker-compose.yml  pyproject.toml  pytest.ini  setup.py  test-requirements.txt
.circleci/: Dockerfile  config.yml  gencfg.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/contrib/: extend.rst  testing.rst
docs/development/: testing.rst
docs/howto/: action_chains.py  action_chains.rst  pytest.rst  test_pytest.py  windows.rst
docs/reference/: actions.rst  browsers.rst  connection.rst  errors.rst  http.rst  index.rst  keys.rst  services.rst  session.rst  supported-browsers.rst  utils.rst  webdriver.rst
docs/tutorials/: helloworld.py  helloworld.rst
docs/user/: concepts.rst  quickstart.rst
examples/: aiohttp_example.py  base.py  tornado_example.py  twisted_example.py
src/arsenic/: __init__.py  actions.py  browsers.py  connection.py  constants.py  errors.py  helpers.py  http.py  keys.py  presets.py  service.py  services.py  session.py  subprocess.py  utils.py  webdriver.py
tests/: Dockerfile  aiohttp_app.py  app.py  conftest.py  requirements.txt  simple.html  test_actions.py  test_aiohttp.py  test_docs_build.py  test_real_browsers.py  test_services.py  test_simple.py  test_subprocess.py  test_tornado.py  test_twisted.py  test_utils.py  tornado_app.py  utils.py
tests/app/: Dockerfile  app.py  plugin.py
tests/browser/: requirements.txt  test_real_browsers.py
tests/dockerfiles/: base  browserstack  chromedriver  geckodriver  phantomjs  (+1 more)
(+45 files in other folders)
