[tool.poetry]
name = "arsenic"
version = "21.8"
description = "Asynchronous WebDriver client"
authors = ["Jonas Obrist <jonas.obrist@hennge.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/HDE/arsenic"
repository = "https://github.com/HDE/arsenic"
documentation = "https://arsenic.readthedocs.io/en/latest/"
keywords = ["asyncio"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: AsyncIO",
  "Topic :: Software Development :: Testing",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
]

[tool.poetry.dependencies]
python = "^3.7"
attrs = ">=17.4.0"
structlog = "^20.1.0"
aiohttp = ">=3"

[tool.poetry.dev-dependencies]
jinja2 = "^2.11.2"
pytest = "^6.0.1"
pytest-asyncio = "^0.14.0"
sphinx = "^3.2.1"
pytest-cov = "^2.10.1"
asyncio-extras = "^1.3.2"
pre-commit = "^2.7.1"
black = "^20.8b1"
Pillow = "^8.1.0"

[tool.poetry.scripts]
arsenic-check-ie11 = "arsenic.helpers:check_ie11_environment_cli"
arsenic-configure-ie11 = "arsenic.helpers:configure_ie11_environment_cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
